@@ -1,6 +1,6 @@
-package com.example.boarding_pass_ticket;
-
+import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 import java.nio.file.Files;
 
@@ -33,34 +33,47 @@ public class ETA {
 
      */
 
-    public HashMap<String, String> generateCitiesMap() throws Exception {
+    public HashMap<String, ArrayList<String>> generateCitiesMap() throws Exception {
 
-        citiesMap = new HashMap<>();
 
-        Path path = Path.of("C:\\Users\\19412\\GenSpark\\BoardingPass\\src\\main\\resources\\cities.txt");
-//        getClass().getResourceAsStream(imgName)
-        try{
-            cities = Files.readString(path);
+        List<String> citiesList = null;
+        ArrayList<String> citiesArray = new ArrayList<>();
+        HashMap<String, ArrayList<String>> citiesMap = new HashMap<>();
+
+        URL url = getClass().getResource("cities.txt");
+        Path path = Paths.get(url.toURI());
+
+        try {
+            citiesList = Files.readAllLines(path);
         } catch (Exception e) {
             e.printStackTrace();
         }
 
-        System.out.println(cities);
-        citiesArray = cities.split("\n");
-
-        for (String name : citiesArray) {
+        String city = null;
+        String country = null;
+        for (String name : citiesList) {
             String[] split = name.split(", ");
+            city = split[0].trim();
+            country = split[1].trim();
 
 
-            String city = split[0].trim();
-            String country = split[1].trim();
+
+            /*
             if(citiesMap.containsKey(country)){
-//                citiesMap.put(country, citiesMap.get(country).add(city));
+                citiesArray.add(city);
+                citiesMap.put(country, citiesArray);
             } else {
-                citiesMap.put(country, city);
+                citiesArray.add(city);
+                citiesMap.put(country, citiesArray);
             }
+
+             */
+
         }
-//        return citiesMap;
+
+        citiesArray.add(city);
+        citiesMap.put(country, citiesArray);
+        System.out.println(citiesMap);
 
         return null;
     }
